--- a/talk/coffea-simple.ipynb
+++ b/talk/coffea-simple.ipynb
@@ -28,13 +28,16 @@
    "execution_count": 1,
    "source": [
     "from func_adl_servicex import ServiceXSourceUpROOT\n",
-    "from servicex import ServiceXDataset, ignore_cache\n",
     "from hist import Hist\n",
     "import awkward as ak\n",
     "\n",
+    "\n",
+    "from coffea import processor\n",
+    "\n",
+    "\n",
+    "from servicex import ServiceXDataset\n",
     "from coffea.processor.servicex import DataSource, Analysis\n",
-    "from coffea.processor.servicex import LocalExecutor\n",
-    "from coffea import processor"
+    "from coffea.processor.servicex import LocalExecutor"
    ],
    "outputs": [],
    "metadata": {}
@@ -67,8 +70,10 @@
     "                     .Select(lambda e: Zip({'lep_pt': e['lep_pt'], 'lep_eta': e['lep_eta']}))\n",
     "                     .Select(lambda leps: leps.Where(lambda l: abs(l.lep_eta) < 1.0))\n",
     "                     .Select(lambda leps: {'lep_pt': leps.lep_pt, 'lep_eta': leps.lep_eta})\n",
-    "                     # .AsParquetFiles('junk.parquet')\n",
-    "                  )"
+    "                  )\n",
+    "\n",
+    "datasets = [ServiceXDataset([ggH125_ZZ4lep], backend_name='uproot-af')]\n",
+    "c_datasets = DataSource(query=selection_atlas, metadata={'dataset': 'ggH125_ZZ4lep'}, datasets=datasets)"
    ],
    "outputs": [],
    "metadata": {}
@@ -78,8 +83,7 @@
    "source": [
     "Note:\n",
     "\n",
-    "* no call to `value`: We do not want to try to render this bogus expression.\n",
-    "* We want to return parquet files - this is what `coffea` will be eating and sending to the processors."
+    "* no call to `value`: We do not want to try to render this bogus expression."
    ],
    "metadata": {}
   },
@@ -91,9 +95,7 @@
     "    @staticmethod\n",
     "    def process(events):\n",
     "        import awkward as ak\n",
-    "        from collections import defaultdict\n",
     "\n",
-    "        sumw = defaultdict(float)\n",
     "        h = (Hist.new\n",
     "             .Reg(50, 0, 200, name='lep_pt', label='Lepton $p_T$ [GeV]')\n",
     "             .StrCat([], name='dataset', label='Dataset', growth=True)\n",
@@ -108,10 +110,7 @@
     "            lep_pt = ak.flatten(leptons.pt/1000.0)\n",
     "        )\n",
     "                \n",
-    "        return {\n",
-    "            \"sumw\": sumw,\n",
-    "            \"pt\": h\n",
-    "        }"
+    "        return h"
    ],
    "outputs": [],
    "metadata": {}
@@ -121,17 +120,6 @@
    "source": [
     "Now we create a real dataset and execute it."
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "source": [
-    "datasets = [ServiceXDataset([ggH125_ZZ4lep], backend_name='uproot-af',\n",
-    "                           image='sslhep/servicex_func_adl_uproot_transformer:pr_fix_awk_bug')]\n",
-    "c_datasets = DataSource(query=selection_atlas, metadata={'dataset': 'ggH125_ZZ4lep'}, datasets=datasets)"
-   ],
-   "outputs": [],
    "metadata": {}
   },
   {
@@ -147,19 +135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "source": [
-    "analysis = atlas_demo_processor()\n",
-    "executor = LocalExecutor()\n",
-    "\n",
     "async def run_updates_stream(accumulator_stream):\n",
     "  count = 0\n",
     "  async for coffea_info in accumulator_stream:\n",
     "    count += 1\n",
     "  return coffea_info\n",
     "\n",
-    "result = await run_updates_stream(executor.execute(analysis, c_datasets))\n",
-    "print(result)"
+    "result = await run_updates_stream(\n",
+    "  LocalExecutor().execute(atlas_demo_processor(), c_datasets)\n",
+    "  )"
    ],
    "outputs": [
     {
@@ -168,7 +154,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "09d033270866436ab98893836877bac8"
+       "model_id": "0e783f3dda184fec8c0cf763abfac937"
       },
       "text/plain": [
        "HBox(children=(FloatProgress(value=0.0, description='[root://eospublic.ce...', layout=Layout(flex='2'), max=90…"
@@ -182,7 +168,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "4ba79fcc71644261947dea516064c7b3"
+       "model_id": "d68c08f5a48e42d193670f23d828ffa9"
       },
       "text/plain": [
        "HBox(children=(FloatProgress(value=0.0, description='        [root://eospublic.ce... Downloaded', layout=Layou…"
@@ -197,25 +183,15 @@
       "C:\\Users\\ilija\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\numba\\core\\cpu.py:97: UserWarning: Numba extension module 'awkward1._connect._numba' failed to load due to 'ImportError(generic_type: type \"kernel_lib\" is already registered!)'.\n",
       "  numba.core.entrypoints.init_all()\n"
      ]
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "{'sumw': defaultdict(<class 'float'>, {}), 'pt': Hist(\n",
-      "  Regular(50, 0, 200, name='lep_pt', label='Lepton $p_T$ [GeV]'),\n",
-      "  StrCategory(['[root://eospublic.cern.ch//eos/opendata/atlas/OutreachDatasets/2020-01-22/4lep/MC/mc_345060.ggH125_ZZ4lep.4lep.root]'], growth=True, name='dataset', label='Dataset'),\n",
-      "  storage=Int64()) # Sum: 392955.0 (393351.0 with flow)}\n"
-     ]
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "source": [
-    "artists = result['pt'].plot()\n",
+    "artists = result.plot()\n",
     "\n",
     "ax = artists[0].stairs.axes  # get the axis\n",
     "ax.legend(loc=\"best\");"
